# occa-transpiler

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  metadata.json
cmake/: EmbedResource.cmake  (+2 more)
example/: CMakeLists.txt  main.cpp  test0_norm.cpp
lib/: CMakeLists.txt
lib/attributes/: attribute_names.h
lib/attributes/backend/: launcher.cpp
lib/attributes/backend/common/: dim.cpp  dim_order.cpp  max_inner_dims.cpp  no_barrier.cpp  nobarrier.cpp  simd_length.cpp
lib/attributes/backend/cuda/: atomic.cpp  barrier.cpp  cxx_record.cpp  exclusive.cpp  global_constant.cpp  global_function.cpp  inner.cpp  kernel.cpp  outer.cpp  restrict.cpp  shared.cpp  tile.cpp  translation_unit.cpp
lib/attributes/backend/dpcpp/: atomic.cpp  barrier.cpp  common.cpp  common.h  exclusive.cpp  global_function.cpp  inner.cpp  kernel.cpp  outer.cpp  restrict.cpp  shared.cpp  tile.cpp  translation_unit.cpp
lib/attributes/backend/handler_params/: inner.h  outer.h
lib/attributes/common/: attribute_utils.cpp
lib/attributes/frontend/: atomic.cpp  barrier.cpp  dim.cpp  dimOrder.cpp  dim_order.cpp  exclusive.cpp  inner.cpp  kernel.cpp  max_inner_dim.cpp  max_inner_dims.cpp  no_barrier.cpp  nobarrier.cpp  outer.cpp  restrict.cpp  shared.cpp  simd_length.cpp  tile.cpp
lib/attributes/params/: tile.h  tile.hpp
lib/attributes/utils/: attribute_string_transformation.cpp  attribute_string_transformation.h  attribute_utils.cpp  code_gen.cpp  code_gen.h  common.cpp  common.h  default_handlers.cpp  default_handlers.h  empty_handlers.h  handle_atomic.cpp  handle_atomic.h  handle_restrict.cpp  handle_restrict.h  handle_shared.cpp  handle_shared.h  inner_outer_utils.cpp  inner_outer_utils.h  kernel_utils.cpp  kernel_utils.h  loop_meta_data.cpp  loop_meta_data.h  parse.h  parser.cpp  parser.h  parser_impl.hpp  replace_attribute.cpp  replace_attribute.h  tile_utils.cpp  tile_utils.h  utils.cpp  utils.h
lib/core/: config.cpp  kernel_metadata.cpp  logger.cpp  metadata_types.cpp  target_backends.cpp  transpilation.cpp  transpilation.h  transpilation_decoders.cpp  transpilation_decoders.h  transpilation_encoded_names.h  transpile.cpp
lib/core/ast_dumper/: ast_dumper.cpp  ast_dumper.h
lib/core/ast_processor_manager/: ast_processor_manager.cpp  ast_processor_manager.h
lib/core/ast_processors/: default_actions.cpp  default_actions.h
lib/core/ast_traversal/: ast_visitor.cpp  ast_visitor.h  launcher_ast_visitor.cpp  preorder_traversal_nlr.cpp  preorder_traversal_nlr.h  semantic_analyzer.cpp  semantic_base.cpp  semantic_category.cpp  semantic_mock.cpp  transpile_ast_consumer.cpp  transpile_ast_consumer.h  transpile_frontend_action.cpp  transpile_frontend_action.h  validate_attributes.cpp  visit_overload.hpp
lib/core/attribute_manager/: attr_decl_handler.cpp  attr_decl_handler.h  attr_handler.cpp  attr_handler.h  attr_stmt_handler.cpp  attr_stmt_handler.h  attribute_manager.cpp  attribute_manager.h  attribute_store.cpp  attribute_store.h  attributed_type_map.cpp  backend_attribute_map.cpp  backend_attribute_map.h  common_attribute_map.cpp  common_attribute_map.h  parsed_attribute_info_base.cpp  parsed_attribute_info_base.h  parsed_attribute_info_base.hpp  result.h
lib/core/builtin_headers/: intrinsic_impl.cpp  intrinsic_impl.h  okl_intrinsic_cuda.h  okl_intrinsic_dpcpp.h  okl_intrinsic_hip.h  okl_intrinsic_host.h  okl_intrinsic_openmp.h
lib/core/diag/: diag_consumer.cpp  diag_consumer.h
lib/core/handler_manager/: attr_handler.h  backend_handler.h  backend_registrar.h  categoty.h  handler_manager.cpp  handler_manager.h  handler_map.cpp  handler_map.h  implicid_handler.h  parse_handler.h  result.h  sema_handler.h
lib/core/intrinsics/: builtin_intrinsics.cpp  builtin_intrinsics.h  external_intrinsics.cpp  external_intrinsics.h
lib/core/kernel_info/: kernel_info.cpp
lib/core/lex/: lexer.cpp  lexer.h
lib/core/metadata/: program.cpp  program.h
lib/core/rewriter/: rewriter_fabric.cpp  rewriter_fabric.h  rewriter_proxy.cpp  rewriter_proxy.h
lib/core/sema/: okl_sema_ctx.cpp  okl_sema_ctx.h  okl_sema_info.cpp  okl_sema_info.h  processor.cpp
lib/core/sys/: setup.cpp  setup.h
lib/core/transpile_session/: error_reporter.cpp  transpile_session.cpp
lib/core/transpiler_session/: attributed_type_map.cpp  attributed_type_map.h  code_generator.cpp  code_generator.h  header_info.cpp  header_info.h  kernel_generator.cpp  kernel_generator.h  kernel_metadata_generator.cpp  kernel_metadata_generator.h  original_source_mapper.cpp  original_source_mapper.h  session_result.h  session_stage.cpp  session_stage.h  transpilation_node.h  transpiler_session.cpp  transpiler_session.h
lib/core/utils/: ast_node_parsers.h  attributes.cpp  attributes.h  cuda_subset.h  for_stmt_parser.cpp  format.cpp  range_to_string.cpp  range_to_string.h  stdout_capture.cpp  stdout_capture.h  tile.cpp  type_converter.cpp  type_converter.h  var_decl.cpp  var_decl.h
lib/core/vfs/: overlay_fs.cpp  overlay_fs.h
lib/pipeline/: normalize.cpp  normalize_and_transpile.cpp  normalizer.cpp  normalizer_and_transpiler.cpp  transpile.cpp  transpiler.cpp
lib/pipeline/core/: error_codes.cpp  error_codes.h  stage_action.cpp  stage_action.h  stage_action_names.h  stage_action_registry.cpp  stage_action_registry.h  stage_action_runner.cpp  stage_action_runner.h
lib/pipeline/stages/: normalize_and_transpile.cpp  okl_directive_expansion.cpp  okl_to_gnu_attr_normalizer.cpp  transpilation.cpp
lib/pipeline/utils/: okl_attribute.h  okl_attribute_traverser.cpp  okl_attribute_traverser.h  std_okl_attribute_traverser.cpp  std_okl_attribute_traverser.h
lib/resources/: okl_intrinsic_cuda.h  okl_intrinsic_dpcpp.h  okl_intrinsic_hip.h  okl_intrinsic_host.h
lib/util/: file_helper.cpp  format.cpp  io_helper.cpp  string_utils.cpp  string_utils.hpp  type_traits.h
tests/functional/: CMakeLists.txt  README.md  generic_configurable_tests.cpp  main.cpp
tests/functional/common/: data_directory.cpp  data_directory.h  load_test_suites.cpp  load_test_suites.h
tests/functional/internal/: test_kernel_info.cpp
tool/: CMakeLists.txt  main.cpp
(+997 files in other folders)
